--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
+
+
 <p>欢迎来到github</p>
 <p>这是我的私人网站</p>
 <h3>荣杰</h3>
